# DCI-backend-python-course-2024-till-2025

./: .gitmodules  README.md
API/01_INTRO/: Intro-01.md
API/02_LIBRARY_API/: Library-01.md  Library-02.md
API/03_TODO_API/: Todo_api-01.md  Todo_api-02.md  Todo_api-03.md  create.py  delete.py  read-1.py  update.py
API/04_BLOG_API/: Blog_api-01.md  Blog_api-02.md  Blog_api-03.md  Blog_api-04.md  Blog_api-05.md  Blog_api-06.md
CLOUD/: Intro-01.md  Intro-02.md
CLOUD/1.INTRO/: Intro-01.md
CLOUD/2.EC2/: EC2-2.md  Ec2-1.md
CLOUD/3.DOCKER/: Docker-01.md  Docker-02.md  Docker-03.md  Docker-04.md  Docker-05.md  Docker-06.md
CLOUD/4.CI_CD/: CI_CD-01.md
CLOUD/5.Terraform/: Terraform-01.md  Terraform-02.md
CLOUD/6.S3/: S3-01.md
CLOUD/7.RDS/: rds-01.md
CLOUD/8.BUFFER_DAY/: array_stack.py  data_strutures-01.md  file.txt
CLOUD/9.AGILE/: agile-01.md
FRAMEWORK/: README.md
FRAMEWORK/4.01_INTRO/: Intro-Django-01.md
FRAMEWORK/4.02_VIEW_TEMPLATES/: View_templates_01.md  View_templates_02.md  View_templates_03.md  View_templates_04.md
FRAMEWORK/4.03_MESSAGE_BOARD_ORM/: Message_board_01.md  Message_board_02.md  Message_board_03.md  Message_board_04.md
FRAMEWORK/4.04_BLOG/: Blog-01.md  Blog-02.md
FRAMEWORK/4.05_BLOG_FORMS/: Forms-01.md  Forms-02.md  Forms-03.md
FRAMEWORK/4.06_USER_AUTH/: User-01.md  User-02.md
FRAMEWORK/4.07_EMAIL/: Email-1.md
databases/lesson-2024-11-26/: README.md  databases_overview.ipynb  family_members.csv
databases/lesson-2024-11-27/: README.md  databases_basic_usage.ipynb
databases/lesson-2024-11-28/: README.md  database_basic_usage.ipynb
databases/lesson-2024-11-29/: README.md  database_basic_usage.ipynb
databases/lesson-2024-12-03/: README.md  database_basic_usage.ipynb
databases/lesson-2024-12-04/: README.md  database_basic_usage.ipynb
databases/lesson-2024-12-05/: README.md  database_usage_in_python.ipynb
databases/lesson-2024-12-06/: README.md  database_usage_in_python.ipynb  myread.csv
databases/lesson-2024-12-10/: database_usage_in_python.ipynb
databases/lesson-2024-12-10_11/: README.md
databases/lesson-2024-12-12/: README.md  databases_usage_in_python.ipynb
databases/lesson-2024-12-13/: README.md  databases_usage_with_python.ipynb
databases/lesson-2024-12-17/: README.md
databases/lesson-2024-12-18/: README.md  advanced_database.ipynb
databases/lesson-2024-12-19/: README.md
fundamentals/lesson-2024-06-21/: terminal_user_group_ll.txt
fundamentals/lesson-2024-06-25/: apt_install.txt
fundamentals/lesson-2024-06-26/: git_commands_01.txt
python-basics/lesson-2024-11-19/base_math/: REAMDE.md  pyproject.toml
python-basics/lesson-2024-11-19/base_math/src/math_EyongKevin/: calc.py
python-basics/lesson-2024-11-21/base_code_count/: README.md  pyproject.toml
python-basics/lesson-2024-11-21/base_dice_game/: LICENCE  README.md  pyproject.toml
python-basics/lesson-2024-11-21/base_dice_game/src/dice_game_EyongKevinEyong/: __init__.py  dice.py  dice_board.py  dummy_dice_game.py  main.py
(+222 files in other folders)
