[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "math_EyongKevin"
version = "1.0.0"
authors = [
   { name="Eyong Kevin", email="tonyparkerkenz@gmail.com" },
]
license = {file = "LICENSE"}
description = "A package to perform basic mathematical operations"
readme = "README.md"
requires-python = ">=3.11.8"
classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Education",
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]
keywords = ["calculator", "math", "addition", "multiplication", "subtraction"]
# dependencies = ["package-name >= version",]
# dependencies = ["pytest == 2.3", ]

#[project.optional-dependencies]
#dev = ["pytest", "isort"]

[project.urls]
#"Homepage": ""
#"documentation" = ""
#"source" = ""
#"download" = ""
#"tracker" = ""