[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code_count_EyongKevinEyong"
version = "1.0.0"
authors = [
   { name="Eyong Kevin", email="tonyparkerkenz@gmail.com" },
]
license = {file = "LICENSE"}
description = "A CLI for counting lines of code in python files"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Education",
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]
keywords = ["cli", "code count"]
# dependencies = ["package-name >= version",]
# dependencies = ["pytest == 2.3", ]

#[project.optional-dependencies]
#dev = ["pytest", "isort"]

[project.urls]
#"Homepage": ""
#"documentation" = ""
#"source" = ""
#"download" = ""
#"tracker" = ""

[project.scripts]
countcode = "code_count_EyongKevinEyong.main:main"
