[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dice_game_EyongKevinEyong"
version = "1.0.2"
authors = [
   { name="Eyong Kevin", email="tonyparkerkenz@gmail.com" },
]
license = {file = "LICENSE"}
description = "A simple but interesting Dice Game for game lovers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Education",
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]
keywords = ["game", "dice", "adventure"]
# dependencies = ["package-name >= version",]
# dependencies = ["pytest == 2.3", ]

#[project.optional-dependencies]
#dev = ["pytest", "isort"]

[project.urls]
#"Homepage": ""
#"documentation" = ""
#"source" = ""
#"download" = ""
#"tracker" = ""